# qml-project

./: .gitignore  CMakeLists.txt  HistoryFailurePage.qml  HomePage.qml  Main.qml  MicrophoneDetailsPage.qml  Page1.qml  Page2.qml  README.md  constants.js  data.js  data.json  main.cpp  server.py  statusEnum.js
